DDF-6680 Spatial app build and unit test run.